--- a/man/rmd/surv_reg_flexsurv.Rmd
+++ b/man/rmd/surv_reg_flexsurv.Rmd
@@ -26,7 +26,7 @@ param$item
 
 ## Translation from parsnip to the original package
 
-```{r flexsurv-reg}
+```{r flexsurv-reg, warning = FALSE}
 surv_reg(dist = character(1)) %>% 
   set_engine("flexsurv") %>% 
   set_mode("regression") %>% 
