Clarify wording in docs about engine arg

--- a/man/rmd/linear_reg_glm.Rmd
+++ b/man/rmd/linear_reg_glm.Rmd
@@ -5,7 +5,7 @@
 
 ## Tuning Parameters
 
-This engine has no tuning parameters but you can set the `family` and/or `link` parameters as engine arguments. 
+This engine has no tuning parameters but you can set the `family` parameter (and `link`) as an engine argument. 
 
 ## Translation from parsnip to the original package
 
