Add glm engine for `linear_reg()` (#624)
* Add glm engine for `linear_reg()`

* Update NEWS

* Use family (not link) in tests

* Clarify wording in docs about engine arg

* parsnip needs development dials for new BART models

* Add example on passing family/link. Closes #619.

* Try dev tidymodels for website (because of dev dials)

* Use v2 actions (because of pkg version conflicts)

--- a/man/rmd/linear_reg_glm.Rmd
+++ b/man/rmd/linear_reg_glm.Rmd
@@ -1,7 +1,7 @@
 ```{r, child = "setup.Rmd", include = FALSE}
 ```
 
-`r descr_models("logistic_reg", "glm")`
+`r descr_models("linear_reg", "glm")`
 
 ## Tuning Parameters
 
@@ -10,7 +10,7 @@ This engine has no tuning parameters but you can set the `family` parameter (and
 ## Translation from parsnip to the original package
 
 ```{r glm-reg}
-logistic_reg() %>% 
+linear_reg() %>% 
   set_engine("glm") %>% 
   translate()
 ```
@@ -19,7 +19,7 @@ To use a non-default `family` and/or `link`, pass in as an argument to `set_engi
 
 ```{r glm-reg-engine}
 linear_reg() %>% 
-  set_engine("glm", family = stats::binomial(link = "probit")) %>% 
+  set_engine("glm", family = stats::poisson(link = "sqrt")) %>% 
   translate()
 ```
 
@@ -30,7 +30,7 @@ linear_reg() %>%
 
 ## Examples 
 
-The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#logistic-reg-glm) for `logistic_reg()` with the `"glm"` engine.
+The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#linear-reg-glm) for `linear_reg()` with the `"glm"` engine.
 
 ## References
 
