move setup.Rmd to aaa.Rmd

--- a/man/rmd/multinom_reg_keras.Rmd
+++ b/man/rmd/multinom_reg_keras.Rmd
@@ -1,4 +1,4 @@
-```{r, child = "setup.Rmd", include = FALSE}
+```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
 `r descr_models("multinom_reg", "keras")`
