--- a/man/rmd/C5_rules_C5.0.Rmd
+++ b/man/rmd/C5_rules_C5.0.Rmd
@@ -1,4 +1,4 @@
-```{r, child = "setup.Rmd", include = FALSE}
+```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
 `r descr_models("C5_rules", "C5.0")`
