--- a/man/rmd/boost_tree_spark.Rmd
+++ b/man/rmd/boost_tree_spark.Rmd
@@ -1,4 +1,4 @@
-```{r, child = "setup.Rmd", include = FALSE}
+```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
 `r descr_models("boost_tree", "spark")`. However, multiclass classification is not supported yet.
