--- a/man/rmd/discrim_regularized_klaR.Rmd
+++ b/man/rmd/discrim_regularized_klaR.Rmd
@@ -1,4 +1,4 @@
-```{r, child = "setup.Rmd", include = FALSE}
+```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
 `r descr_models("discrim_regularized", "klaR")`
