--- a/man/rmd/logistic-reg.Rmd
+++ b/man/rmd/logistic-reg.Rmd
@@ -1,6 +1,6 @@
 # Engine Details
 
-```{r, child = "setup.Rmd", include = FALSE}
+```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
 Engines may have pre-set default arguments when executing the model fit call. 
