--- a/man/rmd/aaa.Rmd
+++ b/man/rmd/aaa.Rmd
@@ -26,7 +26,7 @@ make_mode_list <- function(mod, eng) {
     dplyr::mutate(mode = factor(mode, levels = modes)) %>% 
     dplyr::arrange(mode)
   
-  # Need to get mode-specific dependencies
+  # Need to get mode-specific dependencies (see tidymodels/parsnip#629)
   exts
 }
 
