--- a/man/rmd/decision_tree_rpart.Rmd
+++ b/man/rmd/decision_tree_rpart.Rmd
@@ -45,8 +45,16 @@ decision_tree(tree_depth = integer(1), min_n = integer(1), cost_complexity = dou
 
 ## Translation from parsnip to the original package (censored regression)
 
+`r uses_extension("decision_tree", "rpart", "censored regression")`
+
 ```{r rpart-cens-reg}
-decision_tree(tree_depth = integer(1), min_n = integer(1), cost_complexity = double(1)) %>% 
+library(censored)
+
+decision_tree(
+  tree_depth = integer(1),
+  min_n = integer(1),
+  cost_complexity = double(1)
+) %>% 
   set_engine("rpart") %>% 
   set_mode("censored regression") %>% 
   translate()
