--- a/man/rmd/naive_Bayes_klaR.Rmd
+++ b/man/rmd/naive_Bayes_klaR.Rmd
@@ -27,7 +27,11 @@ Note that `usekernel` is always set to `TRUE` for the `klaR` engine.
 
 ## Translation from parsnip to the original package
 
+`r uses_extension("naive_Bayes", "klaR", "classification")`
+
 ```{r klaR-cls}
+library(discrim)
+
 naive_Bayes(smoothness = numeric(0), Laplace = numeric(0)) %>% 
   set_engine("klaR") %>% 
   translate()
