--- a/man/rmd/poisson_reg_stan.Rmd
+++ b/man/rmd/poisson_reg_stan.Rmd
@@ -22,7 +22,11 @@ See [rstan::sampling()] and [rstanarm::priors()] for more information on these a
 
 ## Translation from parsnip to the original package
 
+`r uses_extension("poisson_reg", "stan", "regression")`
+
 ```{r stan-csl}
+library(poissonreg)
+
 poisson_reg() %>% 
   set_engine("stan") %>% 
   translate()
