--- a/man/rmd/poisson_reg_glmnet.Rmd
+++ b/man/rmd/poisson_reg_glmnet.Rmd
@@ -28,7 +28,11 @@ The `penalty` parameter has no default and requires a single numeric value. For 
 
 ## Translation from parsnip to the original package
 
+`r uses_extension("poisson_reg", "glmnet", "regression")`
+
 ```{r glmnet-csl}
+library(poissonreg)
+
 poisson_reg(penalty = double(1), mixture = double(1)) %>% 
   set_engine("glmnet") %>% 
   translate()
