--- a/man/rmd/poisson_reg_hurdle.Rmd
+++ b/man/rmd/poisson_reg_hurdle.Rmd
@@ -9,7 +9,11 @@ This engine has no tuning parameters.
 
 ## Translation from parsnip to the underlying model call  (regression)
 
+`r uses_extension("poisson_reg", "hurdle", "regression")`
+
 ```{r hurdle-reg}
+library(poissonreg)
+
 poisson_reg() %>%
   set_engine("hurdle") %>%
   translate()
