--- a/man/rmd/poisson_reg_zeroinfl.Rmd
+++ b/man/rmd/poisson_reg_zeroinfl.Rmd
@@ -9,7 +9,11 @@ This engine has no tuning parameters.
 
 ## Translation from parsnip to the underlying model call  (regression)
 
+`r uses_extension("poisson_reg", "zeroinfl", "regression")`
+
 ```{r zeroinfl-reg}
+library(poissonreg)
+
 poisson_reg() %>%
   set_engine("zeroinfl") %>%
   translate()
