--- a/man/rmd/mlp_brulee.Rmd
+++ b/man/rmd/mlp_brulee.Rmd
@@ -8,7 +8,7 @@
 ```{r brulee-param-info, echo = FALSE}
 defaults <- 
   tibble::tibble(parsnip = c("hidden_units", "penalty", "dropout", "epochs", "learn_rate", "activation"),
-                 default = c("3L", "0.0", "0.0", "0.01", "100L", "0.0", "0.01", "'relu'"))
+                 default = c("3L", "0.0", "0.0", "0.01", "100L", "'relu'"))
 
 param <-
   mlp() %>% 
@@ -22,10 +22,11 @@ This model has `r nrow(param)` tuning parameters:
 param$item
 ```
 
-Both `penalty` and `dropout` should be used in the same model. 
+Both `penalty` and `dropout` should be not be used in the same model. 
 
 Other engine arguments of interest: 
 
+ - `momentum()`: A number used to use historical gradient infomration during optimization.
  - `batch_size()`: An integer for the number of training set points in each batch.
  - `class_weights()`: Numeric class weights. See [brulee::brulee_mlp()].
  - `stop_iter()`: A non-negative integer for how many iterations with no improvement before stopping. (default: 5L).
