--- a/man/rmd/poisson_reg_gee.Rmd
+++ b/man/rmd/poisson_reg_gee.Rmd
@@ -12,7 +12,7 @@ This model has no formal tuning parameters. It might be beneficial to determine 
 `r uses_extension("poisson_reg", "gee", "regression")`
 
 ```{r gee-csl}
-library(poissonreg)
+library(multilevelmod)
 
 poisson_reg(engine = "gee") %>% 
   set_engine("gee") %>% 
