--- a/man/rmd/poisson_reg_glmer.Rmd
+++ b/man/rmd/poisson_reg_glmer.Rmd
@@ -12,7 +12,7 @@ This model has no tuning parameters.
 `r uses_extension("poisson_reg", "glmer", "regression")`
 
 ```{r lmer-csl}
-library(poissonreg)
+library(multilevelmod)
 
 poisson_reg(engine = "glmer") %>% 
   set_engine("glmer") %>% 
