Apply suggestions from code review
Co-authored-by: Julia Silge <julia.silge@gmail.com>
Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/man/rmd/example_mlm.Rmd
+++ b/man/rmd/example_mlm.Rmd
@@ -1,13 +1,13 @@
 ```{r quiet-load, include = FALSE}
 library(tidymodels)
 library(multilevelmod)
-library(poissonreg) # current required for poisson_reg()
+library(poissonreg) # contains engines for poisson_reg()
 ```
 
 ```{r, message = FALSE, warning = FALSE}
 library(tidymodels)
 library(multilevelmod)
-library(poissonreg) # current required for poisson_reg()
+library(poissonreg) # contains engines for poisson_reg()
 
 # The lme4 package is required for this model.
 
