--- a/man/rmd/decision_tree_party.Rmd
+++ b/man/rmd/decision_tree_party.Rmd
@@ -25,7 +25,7 @@ param$item
 
 The `tree_depth` parameter defaults to `0` which means no restrictions are applied to tree depth.
 
-An engine specific parameter for this model is: 
+An engine-specific parameter for this model is: 
 
  * `mtry`: the number of predictors, selected at random, that are evaluated for splitting. The default is to use all predictors.
 
