--- a/man/rmd/linear_reg_gls.Rmd
+++ b/man/rmd/linear_reg_gls.Rmd
@@ -29,7 +29,7 @@ There are no specific preprocessing needs. However, it is helpful to keep the cl
 
 The model can accept case weights. 
 
-With `parsnip`, we suggest using the _fixed effects_ formula method when fitting but the details of the correlation structure should be passed to `set_engine()` since it is an irregular (but required) argument:
+With parsnip, we suggest using the _fixed effects_ formula method when fitting, but the details of the correlation structure should be passed to `set_engine()` since it is an irregular (but required) argument:
 
 ```{r}
 library(tidymodels)
@@ -43,7 +43,7 @@ linear_reg() %>%
   fit(depr_score ~ week, data = riesby)
 ```
 
-When using the general tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
+When using tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
 
 ```r
 library(tidymodels)
@@ -65,8 +65,8 @@ fit(gls_wflow, data = riesby)
 
 Note that [nlme::lme()] and [nlme::gls()] can fit the same model but will count degrees of freedom differently. If there are `n` data points, `p` fixed effects parameters, and `q` random effect parameters, the residual degrees of freedom are:
 
-* `lme`: n - p - q
-* `gls`: n - p
+* **lme**: n - p - q
+* **gls**: n - p
 
 As a result, p-values will be different. For example, we can fit the same model using different estimation methods (assuming a positive covariance value): 
 
