--- a/man/rmd/linear_reg_stan_glmer.Rmd
+++ b/man/rmd/linear_reg_stan_glmer.Rmd
@@ -11,7 +11,7 @@ This model has no tuning parameters.
 
 Some relevant arguments that can be passed to `set_engine()`: 
 
-  * `chains`: A positive integer specifying the number of Markov chains. The default is 4.
+ * `chains`: A positive integer specifying the number of Markov chains. The default is 4.
  * `iter`: A positive integer specifying the number of iterations for each chain (including warmup). The default is 2000.
  * `seed`: The seed for random number generation. 
  * `cores`: Number of cores to use when executing the chains in parallel.
@@ -44,7 +44,7 @@ There are no specific preprocessing needs. However, it is helpful to keep the cl
 
 The model can accept case weights. 
 
-With `parsnip`, we suggest using the formula method when fitting: 
+With parsnip, we suggest using the formula method when fitting: 
 
 ```r
 library(tidymodels)
@@ -55,7 +55,7 @@ linear_reg() %>%
   fit(depr_score ~ week + (1|subject), data = riesby)
 ```
 
-When using the general tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
+When using tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
 
 ```r
 library(tidymodels)
@@ -73,7 +73,7 @@ glmer_wflow <-
 fit(glmer_wflow, data = riesby)
 ```
 
-For prediction, the `stan_glmer` engine can compute posterior  intervals analogous to confidence and prediction intervals. In  these instances, the units are the original outcome and when  `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
+For prediction, the `"stan_glmer"` engine can compute posterior intervals analogous to confidence and prediction intervals. In  these instances, the units are the original outcome. When  `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
 
 ## References
 
