--- a/man/rmd/logistic_reg_glmer.Rmd
+++ b/man/rmd/logistic_reg_glmer.Rmd
@@ -30,7 +30,7 @@ There are no specific preprocessing needs. However, it is helpful to keep the cl
 
 The model can accept case weights. 
 
-With `parsnip`, we suggest using the formula method when fitting: 
+With parsnip, we suggest using the formula method when fitting: 
 
 ```r
 library(tidymodels)
@@ -41,7 +41,7 @@ logistic_reg() %>%
   fit(outcome ~ treatment * visit + (1 | patientID), data = toenail)
 ```
 
-When using the general tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
+When using tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
 
 ```r
 library(tidymodels)
