--- a/man/rmd/logistic_reg_stan_glmer.Rmd
+++ b/man/rmd/logistic_reg_stan_glmer.Rmd
@@ -43,7 +43,7 @@ There are no specific preprocessing needs. However, it is helpful to keep the cl
 
 The model can accept case weights. 
 
-With `parsnip`, we suggest using the formula method when fitting: 
+With parsnip, we suggest using the formula method when fitting: 
 
 ```r
 library(tidymodels)
@@ -54,7 +54,7 @@ logistic_reg() %>%
   fit(outcome ~ treatment * visit + (1 | patientID), data = toenail)
 ```
 
-When using the general tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
+When using tidymodels infrastructure, it may be better to use a workflow. In this case, you can add the appropriate columns using `add_variables()` then supply the typical formula when adding the model: 
 
 ```r
 library(tidymodels)
@@ -72,7 +72,7 @@ glmer_wflow <-
 fit(glmer_wflow, data = toenail)
 ```
 
-For prediction, the `stan_glmer` engine can compute posterior  intervals analogous to confidence and prediction intervals. In  these instances, the units are the original outcome and when  `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
+For prediction, the `"stan_glmer"` engine can compute posterior intervals analogous to confidence and prediction intervals. In these instances, the units are the original outcome. When `std_error = TRUE`, the standard deviation of the posterior distribution (or posterior predictive distribution as  appropriate) is returned.
 
 ## References
 
