--- a/man/rmd/poisson_reg_stan.Rmd
+++ b/man/rmd/poisson_reg_stan.Rmd
@@ -41,7 +41,7 @@ Note that the `refresh` default prevents logging of the estimation process. Chan
 
 ## Other details
 
-For prediction, the `"stan"` engine can compute posterior  intervals analogous to confidence and prediction intervals. In  these instances, the units are the original outcome and when `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
+For prediction, the `"stan"` engine can compute posterior intervals analogous to confidence and prediction intervals. In these instances, the units are the original outcome. When `std_error = TRUE`, the standard deviation of the posterior  distribution (or posterior predictive distribution as  appropriate) is returned.
 
 ## Examples 
 
